--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -2,16 +2,16 @@
 
 html {
   font-size: 10px;
-  
+
   // @media (min-width: 1920px) {
   //   font-size: 10px;
   // }
 
-	// @media (min-width: 1024px) and (max-width: 1920px) {
-	// 	font-size: calc(100dvw / 1920 * 10);
-	// }
+  // @media (min-width: 1024px) and (max-width: 1920px) {
+  // 	font-size: calc(100dvw / 1920 * 10);
+  // }
 
-	// @media (max-width: 1023px) {
+  // @media (max-width: 1023px) {
   //   font-size: 10px;
   // }
 }
@@ -25,6 +25,7 @@ body {
 body {
   font-family: $font-main;
   font-weight: 600;
+  color: $color-text;
 }
 
 .wrapper {
@@ -41,17 +42,25 @@ body {
 
 .section {
   width: 100%;
-  padding: 8rem 0;
+  padding: 4rem 0;
+
+  &.section--bg_color {
+    background-color: $color-bg;
+  }
 }
 
 .section__head {
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
   text-align: center;
 }
 
 .section__title {
   font-family: $font-title;
   font-weight: 400;
+  font-size: 4.8rem;
+  @media (max-width: 1023.9px) {
+    font-size: 2.8rem;
+  }
 }
 
 .container {
