--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -61,6 +61,9 @@ body {
   @media (max-width: 1023.9px) {
     font-size: 2.8rem;
   }
+  &.section__title--w {
+    color: $color-white;
+  }
 }
 
 .container {
