--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -7,4 +7,5 @@ $color-primary: #e69a2f;
 $color-secondary: #071c55;
 $color-bg: #f9f9fb;
 $color-text: #2f2f2f;
+$color-text2: rgba(255, 255, 255, 0.6);
 $color-white: #ffffff;
