fix: section title resp

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -52,6 +52,9 @@ body {
 .section__head {
   margin-bottom: 6rem;
   text-align: center;
+  @media (max-width: 420px) {
+    text-align: start;
+  }
 }
 
 .section__title {
